Map Practice 1. Working on Map Zoom, Tilt, Animate 2. Ristricting Map to some specific Areas 3. GeoCoding an address to its coordinates (Search location) 4. Reverse Geocoding (Location from coordinates) 5. Device GPS Enabling completed 6. Getting Current Location Of Device using setMyLocationEnabled(true) 7. Get My Current Location through java code

--- a/app/src/main/res/layout/activity_maps.xml
+++ b/app/src/main/res/layout/activity_maps.xml
@@ -41,6 +41,7 @@
         android:layout_marginRight="10dp"
         android:layout_marginBottom="10dp"
         android:src="@mipmap/ic_launcher"
+        android:visibility="gone"
         map:layout_constraintBottom_toBottomOf="parent"
         map:layout_constraintEnd_toEndOf="parent" />
 
